<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CM Bug Report</string>

    <!-- Main application -->
    <string name="summary">Enter a summary for this report</string>
    <string name="description">Enter a description, what you were doing, apps running, etc.</string>
    <string name="screenshot">Attach screenshot captured with bugreport?</string>
    <string name="action_submit">Submit</string>

    <!-- Notification messages -->
    <string name="notif_title">Bug report</string>
    <string name="notif_processing">Processing bug report\u2026</string>
    <string name="notif_uploading">Creating issue and uploading report\u2026</string>
    <string name="notif_thanks">Thank you for your submission</string>

    <!-- Error messages -->
    <string name="error_no_text">This field must not be empty</string>

    <string name="error_upload_failed">Upload failed: <xliff:g id="reason">%1$s</xliff:g></string>

    <string name="error_problem_creating">Problem creating the issue</string>
    <string name="error_connection_problem">Problem connecting to the server. Tap to retry.</string>
    <string name="action_retry">Retry upload</string>
    <string name="action_delete">Cancel upload</string>
    <string name="error_bad_response">Bad response from server</string>
    <string name="error_file_fail">The file failed to upload</string>
    <string name="error_zip_fail">The file failed to compress</string>

    <string name="submit_crash_report">Preview Crash Report</string>
    <string name="submit">Submit</string>
    <string name="title_subject">Submission subject</string>
    <string name="title_crash_log">Submission content</string>
    <string name="already_submitted">This bug report has already been submitted, thank you!</string>
    <string name="network_unavailable">No network connection available</string>

    <!-- Hidden copy paste feature -->
    <string name="crash_clipboard_toast_message_success">Crash report copied to clipboard.</string>
    <string name="crash_clipboard_toast_message_failure">Failed to copy the crash report to clipboard.</string>
    <string name="crash_clipboard_label">Crash Report</string>
</resources>
