<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="?android:attr/dividerHorizontal"
              android:showDividers="middle"
              android:animateLayoutChanges="true"
              tools:context=".CrashFeedbackActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/submit_crash_report"
            android:id="@+id/textView"
            android:padding="16dp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_subject"
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:typeface="sans"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:id="@+id/subject"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_crash_log"
                android:id="@+id/textView4"
                android:textStyle="bold"
                android:typeface="sans"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/scrollView"
                android:layout_weight="1">

            <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/content"
                        android:typeface="monospace"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"/>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:background="#66d84a45"
            android:id="@+id/no_network_warning">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/network_unavailable"
                android:id="@+id/textView3"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:text="@android:string/cancel"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

        <Button
                android:id="@+id/submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:enabled="false"
                android:text="@string/submit"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>